# pandas-express

./: MANIFEST.in  README.md  data.json  pyproject.toml
pandasExpress/: __init__.py  express_dataframe.py
tests/: test_express_dataframe.py
